# multi_robot_stage

./: README.md  package.xml
launch/: move_base.launch  multi_robot.launch  navigation.launch
